# qblas

./: CMakeLists.txt  README.md  fpm.toml
app/: main.f90
src/: ioamax.f90  iqamax.f90  oaxpy.f90  ocopy.f90  odotc.f90  odotu.f90  odrot.f90  odscal.f90  ogbmv.f90  ogemm.f90  ogemv.f90  ogerc.f90  ogeru.f90  ohbmv.f90  ohemm.f90  ohemv.f90  oher.f90  oher2.f90  oher2k.f90  oherk.f90  ohpmv.f90  ohpr.f90  ohpr2.f90  orotg.f90  oscal.f90  oswap.f90  osymm.f90  osyr2k.f90  osyrk.f90  otbmv.f90  otbsv.f90  otpmv.f90  otpsv.f90  otrmm.f90  otrmv.f90  otrsm.f90  otrsv.f90  qasum.f90  qaxpy.f90  qblas.f90  (+36 more)
