cmake_minimum_required(VERSION 2.8.5)

project(lib)
enable_language(Fortran)
set(CMAKE_BUILD_TYPE Release)
file(GLOB source "./src/*.f90")
add_library(qblas STATIC ${source})
#set(BLA_LIBRARIES /usr/lib/x86_64-linux-gnu/libopenblas.so)
#FIND_PACKAGE(BLAS QUIET)
#FIND_PACKAGE(LAPACK QUIET)
#IF(BLAS_FOUND AND LAPACK_FOUND)
#    MESSAGE(STATUS "BLAS/LAPACK found at: ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES}")
#    SET(BLA_LIBRARIES ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})
#ELSE()
#    SET(WITH_BLAS_LAPACK "ON")
#ENDIF()
#add_executable(myexe main.f90 free_line_ft.f90 parameter_mod.f90 matrxi_mod.f90)
#target_link_libraries(myexe ${BLA_LIBRARIES})
